--- a/22-tools.Rmd
+++ b/22-tools.Rmd
@@ -76,6 +76,7 @@ You can learn more about rmarkdown in this [video](https://vimeo.com/178485416).
 
 Some other great resources:
 
+* [pagedreport](https://pagedreport.rfortherestofus.com). If you are writing a consulting report this package could be very useful. 
 
 * [R Markdown: The Definitive Guide](https://bookdown.org/yihui/rmarkdown/) by Xie, Allaire, and Grolemund. Free.
 
