--- a/18-multiple_regression.Rmd
+++ b/18-multiple_regression.Rmd
@@ -511,3 +511,12 @@ Try the interactive version of the graph below. Caveat, sometimes it doesn't app
 surface_plot
 ```
 
+## Control variables
+
+Many people use "control" variables in their multiple regression. Before using this type of analysis I urge you to read:
+
+
+[Wysocki, A. C., Lawson, K. M., & Rhemtulla, M. (2022). Statistical control requires causal justification. Advances in Methods and Practices in Psychological Science, 5(2), 25152459221095823.](https://doi.org/10.1177%2F25152459221095823)
+
+
+
