--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -799,8 +799,7 @@ Comparison using $F$-ratio | $\frac{\frac{na\sum(\bar{x_i}-\bar{\bar{x}})^2}{b-1
 
 ## Interaction variance
 
-When we say two variable **interact** to predict the dependent variable we are saying there is more going on that the two main effects.
-So when we seek to determine if there is an interaction we work with **residualized** cell means. That is, cell means were the main effects have been removed. In the next section we illustrate how those residualized cell means are calculated.
+Interaction calculations are similar to main effect calculations. However, there is a substantial amount of work we need to do before being able to do those calculations. When we say two variable **interact** to predict the dependent variable we are saying there is more going on than the two main effects. So when we seek to determine if there is an interaction we work with **residualized** cell means. That is, cell means were the main effects have been removed. That's the work we need to do before proceeding with the calculations used above. In the section below we create the residualized means. In the subsequent section we return to the familiar calculations we used for main effects.
 
 
 ### Obtaining residualized means
