--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -1,4 +1,8 @@
-# Sampling and N-way ANOVA [Under Construction]
+# Sampling and N-way ANOVA
+
+UNDERCONSTRUCTION
+UNDERCONSTRUCTION
+UNDERCONSTRUCTION
 
 ## Previously: One-way ANOVA
 
@@ -598,6 +602,7 @@ We calculate an F-value to compare these two values:
 $$
 \begin{align}
 F &= \frac{\frac{\sum (\bar{x_i}-\bar{\bar{x}})^2}{a-1}}{\frac{s_{people}^2}{nb}}\\
+&=\frac{\frac{(77.33333 - 66.56667)^2 + (55.8 - 66.56667)^2}{2-1}}{\frac{60}{(5)(3)}}\\
 &=\frac{231.8422}{\frac{60}{(5)(3)}}\\
 &=\frac{231.8422}{\frac{60}{15}}\\
 &=\frac{231.8422}{4}\\
