--- a/15-deeper_sampling.Rmd
+++ b/15-deeper_sampling.Rmd
@@ -537,7 +537,7 @@ In the previous chapter, we created this exact distribution. See it presented ag
 load(file = "ch_deep_sampling/data_ratio_3pop.RData")
 ```
 
-```{r graph3pop, out.width="100%", echo=FALSE, fig.cap ="Variance ratio when there are three identical populations of people"}
+```{r graph3popag, out.width="100%", echo=FALSE, fig.cap ="Variance ratio when there are three identical populations of people"}
 library(ggplot2)
 
 ggplot(data = data_ratios3, mapping = aes(x = var_ratio)) +
