--- a/16-sampling-nway.Rmd
+++ b/16-sampling-nway.Rmd
@@ -1,7 +1,9 @@
 # Sampling and N-way ANOVA
 
 UNDERCONSTRUCTION
+
 UNDERCONSTRUCTION
+
 UNDERCONSTRUCTION
 
 ## Previously: One-way ANOVA
@@ -19,9 +21,9 @@ N-way ANOVA differs from one-way ANOVA because you can look how the multiple ind
 
 Additionally, because there are multiple independent variables there are multiple sets of populations to consider. For simplicity, we will focus on only two independent variables for this chapter  (i.e., a 2-way ANOVA). Specifically, consider a ficticous example where we examine how two independent variables **combine** to influence how calm students are before an exam. Calmness before the exam is the dependent variable. 
 
-The first independent variable is juggling (yes/no) during study breaks. This independent variable has two levels: **yes** and **no**. So we think of there being two populations of calmness scores obtained before the exam: 1) a population of calmness scores for students who learned to juggling during study breaks and 2) a population of calmness scores for students who did not learn to juggle during study breaks. We refer to this **set** of two populations (*yes* and *no* juggling) using the label **juggling**. Juggling is an **independent variable** or **factor** in our design. We are interested in how juggling level (yes/no) influences the mean of these two populations of calmness scores. We consider the participants in our juggling levels as samples from these two populations.
+The first independent variable is juggling (yes/no) during study breaks. This independent variable has two levels: **yes** and **no**. So we think of there being two populations of calmness scores obtained before the exam: 1) a population of calmness scores for students who learned to juggling during study breaks and 2) a population of calmness scores for students who did not learn to juggle during study breaks. We refer to this **set** of two populations (*yes* and *no* juggling) using the label **juggling**. Juggling is an **independent variable** or **factor** in our design. We are interested in how juggling level (yes/no) influences the mean of these two populations of calmness scores. We consider the participants in our study as samples from these two populations.
 
-The second independent variable is preparation (low/medium/high) time before the exam. That is, how much students studied before the exam. This independent variable has three levels: **low**, **medium**, and **high**. So we think of there being three populations of calmness scores obtained before the exam: 1) a population of calmness scores where students prepared a low amount of time, 2) a population of calmness scores where students prepared a medium amount of time, and 3) a population of calmness scores where students prepared a high amount of time. We refer to this **set** of three populations (*low*, *medium*, and *high* preparation) using the label **preparation**. Preparation is an *independent variable* or *factor* in our design. We are interested in how preparation level (low/medium/high) influences the mean of these three  populations of calmness scores. We consider the participants in our preparation levels as samples from these three populations.
+The second independent variable is preparation (low/medium/high) time before the exam. That is, how much students studied before the exam. This independent variable has three levels: **low**, **medium**, and **high**. So we think of there being three populations of calmness scores obtained before the exam: 1) a population of calmness scores where students prepared a low amount of time, 2) a population of calmness scores where students prepared a medium amount of time, and 3) a population of calmness scores where students prepared a high amount of time. We refer to this **set** of three populations (*low*, *medium*, and *high* preparation) using the label **preparation**. Preparation is an *independent variable* or *factor* in our design. We are interested in how preparation level (low/medium/high) influences the mean of these three  populations of calmness scores. We consider the participants in our study as samples from these three populations.
 
 
 As mentioned previously, an advantage of conducting a 2-way ANOVA over two 1-way ANOVAs is that we get to look at how calmness scores are influenced by the **combined** effect of the two independent variables. You can see this in the diagram below - there are **six cells** each of which is created by the **combination** of one level of juggling and one level of preparation. We call this a *fully-crossed* design because there are people at every combination of juggling and preparation levels. When we examine cells we are looking at the combined effect of independent variables on the dependent variable. When we do this, we typically say we are examining how the independent variables **interact** to influence the dependent variable. You can this of the six cells are another **set** of populations. We will see people that you can think of each set of populations as a frame of reference.
@@ -80,7 +82,7 @@ knitr::include_graphics("ch_deeper_nway/images/nway_table_clean.png")
 
 A complication many students experience with understanding the different frames of reference that can be used with N-way ANOVA is the notation. Particularly when it comes the different sample sizes involved in this design. Therefore, prior to continuing we'll review some key notation. 
 
-The notation is general in nature because each experiment will have different independent variables. A common way to refer to the first independent variable using symbolic notiation is by using an uppercase $A$. Likewise, we refer to the number of levels in that independent variable using lowercase $a$. Thus, for the first independent variable $A$ = "Juggling" and $a = 2$ because there are two levels of juggling (yes or no). So instead of saying we are examining the effect of juggling on calmness we might say we are examining the effect of Independent Variable $A$ on the dependent variable. For the second independent variable we use uppercase $B$ and lowercase $b$, and so on. The table below illustrates how we represent both independent variables in this experiment.
+The notation is general in nature because each experiment will have different independent variables. A common way to refer to the first independent variable using symbolic notation is by using an uppercase $A$. Likewise, we refer to the number of levels in that independent variable using lowercase $a$. Thus, for the first independent variable $A$ = "Juggling" and $a = 2$ because there are two levels of juggling (yes or no). So instead of saying we are examining the effect of juggling on calmness we might say we are examining the effect of Independent Variable $A$ on the dependent variable. For the second independent variable we use uppercase $B$ and lowercase $b$, and so on. The table below illustrates how we represent both independent variables in this experiment.
 
  Effect  | Letter designation | Number of levels| Levels| 
 :-------:|:------------------:|:---------------:|:-----:|
@@ -848,7 +850,7 @@ The final residualized cell means we use for the interaction calculation are bel
 yes_juggle | $`r round(rg1,2)`$ | $`r round(rg2,2)`$ | $`r round(rg3,2)`$ |
 no_juggle | $`r round(rg4,2)`$ |  $`r round(rg5,2)`$ | $`r round(rg6,2)`$ |
 
-## Interaction calculations
+## Interaction ($AB$) calculations
 
 
 It's important to remember that the above table of residualized cell means is a table of **sample-level** residualized means. That means, the values in the cells are influenced by both the population means (for the cell and the main effects) as well as sampling error.
